--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
 		<body>
+			<img src="/2019-05-09.png">
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
