--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,9 @@
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
-		<body>
+		<body style="background-image:url('/bonobo_luv.jpeg');">
 			
 			<nav>
-	    		<img src="/2019-05-09.png" height="100" width="100"/>
 			<ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About</a></li>
