--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
-		<body style="background-image:url('/bonobo_luv.jpeg');">
+		<body style="background-image:url('2019-05-09.png');">
 			
 			<nav>
 			<ul>
